# df_ai_tools

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.aliyun  README.md  docker-compose.yml  docker-run.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test-all-api.ps1
.codegraph/: daemon.pid
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
docs/: development-workflow.md
docs/wiki/: Accounting.md  Calendar.md  Deployment.md  FAQ.md  Home.md  Notify.md  README.md  Todo.md  _Sidebar.md
scripts/: README.md  push-gitea.py  release.py  test_api_combo.py
scripts/deploy/: generate-deploy.py  setup-watchtower.ps1  setup-watchtower.sh
scripts/linux/: run-docker.sh  run-local.sh
scripts/windows/: run-docker.ps1  run-local.ps1
src/: audit.py  audit_router.py  auth.py  auth_router.py  backup.py  backup_router.py  data_exchange.py  data_exchange_router.py  db.py  logger.py  main.py  mcp_entry.py
src/accounting/: router.py  service.py  tools.py
src/calendar/: router.py  service.py  tools.py
src/cli/: __init__.py  __main__.py  accounting.py  calendar.py  notify.py  todo.py  utils.py
src/notify/: router.py  service.py  tools.py
tests/: conftest.py  test_accounting.py  test_api_contract.py  test_backup_unit.py  test_calendar.py  test_edge_cases.py  test_logger.py  test_mcp.py  test_mcp_transport.py  test_middleware.py  test_new_features.py  test_notify.py  test_todo.py
(+9 files in other folders)
