[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aitools-cli"
version = "2.1.0"
description = "Agent Tools Kit — 记账/待办/日历/通知 命令行工具"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
aitools = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "src/mcp_entry.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
exclude_lines = [
    "if __name__ == .__main__.:",
    "except Exception:",
    "try:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
